Regularizar values.yaml | Actualizacion de schedule_interval por schedule

--- a/airflow/docker/config/airflow.cfg
+++ b/airflow/docker/config/airflow.cfg
@@ -2298,7 +2298,7 @@ dag_stale_not_seen_duration = 600
 use_job_schedule = True
 
 # Allow externally triggered DagRuns for Execution Dates in the future
-# Only has effect if schedule_interval is set to None in DAG
+# Only has effect if schedule is set to None in DAG
 #
 # Variable: AIRFLOW__SCHEDULER__ALLOW_TRIGGER_IN_FUTURE
 #
